Added functionality for tests
