# cmd/routes/user.routes.go
@@ -11,7 +11,13 @@ func UserRoute(router *gin.RouterGroup, userSrv service.UserService) {
 	handler := handlers.NewUserHandler(userSrv)
 	user := router.Group("/users")
 	{
-		user.POST("", handler.Create)
-		user.POST("/login", handler.Login)
+		user.GET("/:userId", handler.Get)
+		user.GET("", handler.GetAll)
+	}
+
+	auth := router.Group("/auth")
+	{
+		auth.POST("/register", handler.Create)
+		auth.POST("/login", handler.Login)
 	}
 }
