# docs/swagger.yaml
@@ -41,13 +41,26 @@ definitions:
         type: string
       first_name:
         type: string
-      id:
-        type: string
       last_name:
         type: string
       password:
         type: string
       phone_number:
+        type: string
+      user_id:
+        type: string
+    type: object
+  response.SuccessMessage:
+    properties:
+      code:
+        example: 200
+        type: integer
+      data: {}
+      message:
+        example: fetched successfully
+        type: string
+      status:
+        example: success
         type: string
     type: object
   se.ServiceError:
@@ -67,7 +80,7 @@ info:
     email: bobdence@gmail.com
     name: Confidence James
     url: http://github.com/jamesconfy
-  description: Server for https://bennyfoodie.netlify.app/
+  description: Server for {{your server link}}
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -75,41 +88,7 @@ info:
   title: Project
   version: "1.0"
 paths:
-  /users:
-    post:
-      consumes:
-      - application/json
-      description: Register route
-      parameters:
-      - description: Signup Details
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/forms.Create'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/se.ServiceError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/se.ServiceError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/se.ServiceError'
-      summary: Register route
-      tags:
-      - Users
-  /users/login:
+  /auth/login:
     post:
       consumes:
       - application/json
@@ -127,7 +106,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            allOf:
+            - $ref: '#/definitions/response.SuccessMessage'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.User'
+              type: object
         "400":
           description: Bad Request
           schema:
@@ -141,6 +125,117 @@ paths:
           schema:
             $ref: '#/definitions/se.ServiceError'
       summary: Login route
+      tags:
+      - Auth
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Register route
+      parameters:
+      - description: Signup Details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/forms.Create'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.SuccessMessage'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.User'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+      summary: Register route
+      tags:
+      - Auth
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Get all users in the system
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.SuccessMessage'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.User'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+      summary: Get all user route
+      tags:
+      - Users
+  /users/{userId}:
+    get:
+      consumes:
+      - application/json
+      description: Get user by id
+      parameters:
+      - description: User id
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.SuccessMessage'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.User'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/se.ServiceError'
+      summary: Get user route
       tags:
       - Users
 schemes:
